unpackaged/main/default/objects/OpportunityContactRole/fields/Marketplace_Buyer_Contract_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Buyer_Contract_Mismatch__c</fullName>
    <formula>ISPICKVAL(Role,&quot;Marketplace Buyer&quot;) &amp;&amp;
Opportunity.Contract.Marketplace_Terms_Buyer_Email__c != Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketplace Buyer: Contract Mismatch?</label>
    <type>Checkbox</type>
</CustomField>