unpackaged/main/default/objects/OpportunityContactRole/fields/Outreach_Opportunity_Contact_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Opportunity_Contact_Role_ID__c</fullName>
    <label>Outreach: Opportunity Contact Role ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>