unpackaged/main/default/objects/OpportunityContactRole/fields/Receive_Renewal_Communications__c.field-meta.xml
<CustomField>
    <fullName>Receive_Renewal_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Renewal Communications?</label>
    <type>Checkbox</type>
</CustomField>