unpackaged/main/default/objects/OpportunityContactRole/fields/Role_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_Added_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Role Added Date</label>
    <type>Date</type>
</CustomField>